--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         <activity android:name=".SelectionDragon"/>
         <activity android:name=".Game"/>
         <activity android:name=".CleanEgg"/>
+        <activity android:name=".Story"/>
         <activity android:name=".DragonHatch" />
         <activity android:name=".MainActivity">
         <intent-filter>
